// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test receive #1 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderColor": "#BFBDBD",
        "borderRadius": 10,
        "borderWidth": 0.5,
        "justifyContent": "center",
        "marginTop": 100,
        "padding": 10,
        "width": "80%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "marginBottom": 10,
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../assets/img/logo.png",
          }
        }
        style={
          Object {
            "height": 30,
            "marginRight": 10,
            "width": 30,
          }
        }
      />
      <Text
        style={
          Object {
            "color": "#2AB2E2",
            "fontFamily": "Roboto-Medium",
            "fontSize": 20,
            "marginBottom": 10,
            "marginTop": 6,
            "textAlign": "center",
          }
        }
      >
        fractapp_wallet_title
      </Text>
    </View>
    <View>
      <Text>
        1exaAg2VJRQbyUBAeXcktChCAqjVP9TUxF3zo23R2T6EGdE
      </Text>
      <Text>
        250
      </Text>
    </View>
    <Text
      style={
        Object {
          "color": "#888888",
          "fontFamily": "Roboto-Regular",
          "fontSize": 15,
          "marginTop": 20,
          "textAlign": "center",
        }
      }
    >
      1exaAg2VJRQbyUBAeXcktChCAqjVP9TUxF3zo23R2T6EGdE
    </Text>
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "center",
        "marginTop": 30,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#2AB2E2",
            "borderRadius": 45,
            "height": 60,
            "justifyContent": "center",
            "width": 60,
          }
        }
        testID="copyBtn"
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "white",
                "fontSize": 24,
              },
              undefined,
              Object {
                "fontFamily": "Material Design Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          󰆏
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "black",
            "fontFamily": "Roboto-Regular",
            "fontSize": 16,
            "fontStyle": "normal",
            "paddingTop": 2,
            "textAlign": "center",
          }
        }
      >
        copy_btn
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
          Object {
            "marginLeft": 30,
          },
        ]
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#2AB2E2",
              "borderRadius": 45,
              "height": 60,
              "justifyContent": "center",
              "width": 60,
            },
          ]
        }
        testID="shareBtn"
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "white",
                "fontSize": 24,
              },
              undefined,
              Object {
                "fontFamily": "Material Design Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          󰸇
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "black",
            "fontFamily": "Roboto-Regular",
            "fontSize": 16,
            "fontStyle": "normal",
            "paddingTop": 2,
            "textAlign": "center",
          }
        }
      >
        share_btn
      </Text>
    </View>
  </View>
</View>
`;

exports[`Test receive #2 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderColor": "#BFBDBD",
        "borderRadius": 10,
        "borderWidth": 0.5,
        "justifyContent": "center",
        "marginTop": 100,
        "padding": 10,
        "width": "80%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "marginBottom": 10,
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../assets/img/logo.png",
          }
        }
        style={
          Object {
            "height": 30,
            "marginRight": 10,
            "width": 30,
          }
        }
      />
      <Text
        style={
          Object {
            "color": "#2AB2E2",
            "fontFamily": "Roboto-Medium",
            "fontSize": 20,
            "marginBottom": 10,
            "marginTop": 6,
            "textAlign": "center",
          }
        }
      >
        fractapp_wallet_title
      </Text>
    </View>
    <View>
      <Text>
        F7Zbj7rRJQLQVvQn8tKnWmSByAoFFYKYd17hSxdmYbcZzoE
      </Text>
      <Text>
        250
      </Text>
    </View>
    <Text
      style={
        Object {
          "color": "#888888",
          "fontFamily": "Roboto-Regular",
          "fontSize": 15,
          "marginTop": 20,
          "textAlign": "center",
        }
      }
    >
      F7Zbj7rRJQLQVvQn8tKnWmSByAoFFYKYd17hSxdmYbcZzoE
    </Text>
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "center",
        "marginTop": 30,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#2AB2E2",
            "borderRadius": 45,
            "height": 60,
            "justifyContent": "center",
            "width": 60,
          }
        }
        testID="copyBtn"
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "white",
                "fontSize": 24,
              },
              undefined,
              Object {
                "fontFamily": "Material Design Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          󰆏
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "black",
            "fontFamily": "Roboto-Regular",
            "fontSize": 16,
            "fontStyle": "normal",
            "paddingTop": 2,
            "textAlign": "center",
          }
        }
      >
        copy_btn
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
          Object {
            "marginLeft": 30,
          },
        ]
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#2AB2E2",
              "borderRadius": 45,
              "height": 60,
              "justifyContent": "center",
              "width": 60,
            },
          ]
        }
        testID="shareBtn"
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "white",
                "fontSize": 24,
              },
              undefined,
              Object {
                "fontFamily": "Material Design Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          󰸇
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "black",
            "fontFamily": "Roboto-Regular",
            "fontSize": 16,
            "fontStyle": "normal",
            "paddingTop": 2,
            "textAlign": "center",
          }
        }
      >
        share_btn
      </Text>
    </View>
  </View>
</View>
`;
